# Helheim

./: .gitignore  ANTIGRAVITY_GROK_ROLES_AND_NEXT_STEPS.md  ARTISJOK_REMOVAL_LOG.md  CHANGELOG.md  CHEATSHEET.md  Cargo.toml  Dockerfile  EXAMPLES.md  GITHUB_PROFESSIONALIZATION_TASKS.md  Helheim_Language_Spec.md  Helheim_Professionaliserings_Plan_Reviewed.md  LANGUAGE_COMPLETION_CHECKLIST.md  LANGUAGE_COMPLETION_PLAN_FOR_ANTIGRAVITY.md  LICENSE  Motor_Cortex_Dashboard_Integration_Plan_For_Antigravity.md  Motor_Cortex_Dashboard_Integration_Plan_Reviewed.md  NEXT_PHASE_PLAN_FOR_ANTIGRAVITY.md  NEXUS_ACTION_MAPPING_AND_DREAM_STATE_BLUEPRINT.md  NEXUS_ASTROCYTE_MOODS_FATIGUE_BLUEPRINT.md  NEXUS_CEREBELLUM_FORWARD_MODEL_BLUEPRINT.md  NEXUS_DISTRIBUTED_HIVE_MIND_BLUEPRINT.md  NEXUS_INTELLIGENCE_EVALUATION_FRAMEWORK.md  NEXUS_PFC_BASAL_GANGLIA_SEQUENCING_BLUEPRINT.md  NEXUS_QUANTUM_TENSOR_COMPRESSION_BLUEPRINT.md  NEXUS_TOPOLOGICAL_SENSORY_CORTEX_BLUEPRINT.md  NEXUS_TT_CANN_HILBERT_ORDERING_MAP.md  Optimization_Plan.md  PROGRAMMEERTAAL_AFRONDEN_PLAN.md  README.md  README_AGENT_PROTOCOL.md  README_SYSTEM.md  SWARM_DEPLOYMENT_PLAN.md  benchmark.hel  blueprint.md  demo.html  distributed_teleport.hel  effect_demo.hel  gpu_scan.hel  helfetch.hel  last_actions.md  (+22 more)
helheim-cli/: .gitignore  AI_INTEGRATION.md  Cargo.toml  Cargo.toml.backup  LICENSE  README.md  activate_gpu.sh  bench_python.py  deploy_local.sh  fix_all.sh  fix_brain.sh  fix_web.sh  helheim-run.sh  install_hive.sh  push_to_server.sh  restore_antigravity.sh  status.txt  test.hel  test_output.txt
helheim-cli/ai_archive/brain/: inference.rs  loader.rs  mod.rs
helheim-cli/deploy/: helheim-body.service  helheim-brain.service
helheim-cli/helheim/: roadmap.md
helheim-cli/helheim/shield/: shield_readme.md
helheim-cli/runestones/shield/: readme.md
helheim-cli/src/: main.rs
helheim-cli/src/cli/: intent.rs  mod.rs
helheim-cli/src/common/: axioms.rs  rune.rs  telemetry.rs
helheim-cli/src/gpu/: matmul_fp16.ptx  mod.rs
helheim-cli/src/network/: swarm.rs
helheim-cli/src/orchestra/: mod.rs  parser.rs  swarm.rs  synthesis.rs
helheim-cli/src/shield/: cage.rs  crypto.rs  mod.rs  trap.rs  wire.rs
helheim-cli/src/std/: fs.rs  http.rs  (+1 more)
helheim-cli/usb_payload/: README.txt  helheim.service  helheim.sig  install.sh
helheim-gateway/: Cargo.toml
helheim-gateway/src/: auth.rs  dashboard.rs  dashboard_legacy.rs  eventlog.rs  external_api.rs  main.rs  openai.rs  ratelimit.rs  sessions.rs  stripe_pay.rs
helheim-gateway/static/: analytics.html  chat.html  dashboard.html  debug.html  demo.html  docs.html  feedback.html  health.html  landing.html  login.html  models.json  providers.html  settings.html  status.html  tenants.html  terms.html  usage.html  widget.js
helheim-gateway/tests/: e2e.rs
helheim-lang/: Cargo.toml
helheim-lang/src/: ast.rs  lib.rs  memory.rs  parser.rs  parser.rs.backup  parser.rs.bak.1780672598  persistence.rs  resolver.rs  semantic.rs  synthesis.rs  synthesis_patch.rs
helheim-lang/tests/: test_general_code_taal.rs  test_parser_to_ptx.rs
(+209 files in other folders)
