[package]
name = "helheim-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "helheim_alchemie"
crate-type = ["cdylib", "rlib"]

[features]
cuda = []

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake3 = "1.8.3"
clap = { version = "4.5.54", features = ["derive"] }
num_cpus = "1.16"
socket2 = "0.5"
lazy_static = "1.4"
cudarc = { version = "0.19.0", features = ["driver", "nvrtc", "cuda-11040"] }
hex = "0.4.3"
ndarray = "0.17.2"
ndarray-linalg = "0.18.1"
nom = "7.1.3"
openblas-src = "0.10.14"
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
dirs = "5.0"           # Home Dir Resolution
ureq = "3.1.4"
rustyline = "17.0.2"
colored = "3.1.1"
ring = "0.17"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
dashmap = "6.2.1"
evalexpr = "13.1.0"
