[package]
name = "helheim-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "helheim-gateway"
path = "src/main.rs"

[dependencies]
helheim_alchemie = { package = "helheim-cli", path = "../helheim-cli" }
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
rand = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
