[package]
name = "helheim-gateway"
version = "0.1.0"
edition = "2024"

[features]
cuda = ["helheim-core/cuda"]

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

helheim-core = { path = "../helheim-core", default-features = false }
helheim-lang = { path = "../helheim-lang" }
base64 = "0.22"
