[package]
name = "helheim-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.10"
lazy_static = "1.4.0"
nom = "7.1.3"
anyhow = "1.0.100"
evalexpr = "13.1.0"
dirs = "5.0"
tokio = { version = "1.43", features = ["full"] }
dashmap = "6.1.0"
